--- a/www/pages/thread.html
+++ b/www/pages/thread.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="fab fab-right-bottom display" id="new-comment">
-      <a href="#" class="new-comment-dialog"><i class="icon f7-icons">bubble_rigth_fill</i></a>
+      <a href="#" class="new-comment-dialog"><i class="icon f7-icons">bubble_left_fill</i></a>
     </div>
   </div>
 </template>
