--- a/www/pages/thread.html
+++ b/www/pages/thread.html
@@ -29,7 +29,7 @@
         <img class="modal-content" id="modal-image">
       </div>
     </div>
-    <div class="fab fab-right-bottom display" id="new-comment">
+    <div class="fab fab-right-bottom padding-right display color-red" id="new-comment">
       <a href="#" class="new-comment-dialog"><i class="icon f7-icons">bubble_left_fill</i></a>
     </div>
   </div>
