Se agregaron los pdf y mejoraron otros detalles

--- a/www/pages/thread.html
+++ b/www/pages/thread.html
@@ -14,8 +14,24 @@
     </div>
     <!-- Scrollable Page Content-->
     <div class="page-content">
+      <!-- Es para la pagina donde se muestra la imagen de la tarea
       <div class="card demo-card-header-pic">
-        <div id="thread-img" class="card-header align-items-flex-end"></div>
+        <div id="thread-img" class="card-header align-items-flex-end">
+
+        </div>
+        <div class="card-content card-content-padding">
+          <p id="thread-description"></p>
+        </div>
+      </div>
+      -->
+      <embed 
+      type="application/pdf" 
+      id="pdfViewer" 
+      width="100%" 
+      height="500" 
+      src="https://firebasestorage.googleapis.com/v0/b/reactfirebase-c1dc0.appspot.com/o/threads%2FS1t3Y5p2nIjMjqbLnN9W.pdf?alt=media&token=89a49b1d-437b-4ff3-bb8e-789cefe0998b">
+      
+      <div class="card demo-card-header-pic">
         <div class="card-content card-content-padding">
           <p id="thread-description"></p>
         </div>
