--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
-  <link rel="icon" href="./logo.png">
+  <link rel="icon" href="./assets//logo.png">
 
   <link rel="stylesheet" href="framework7/css/framework7.bundle.min.css">
   <link rel="stylesheet" href="css/icons.css">
@@ -32,9 +32,9 @@
         <div class="navbar">
           <div class="navbar-bg"></div>
               <div class="navbar-inner">
-                <div class="left sliding">
+                <div class="left">
                   <a href="#" class="link">
-                    Logo
+                    <img src="assets/logo.png" alt="logo pagina" width="37"/>
                   </a>
                   <a href="#" class="link">
                     Inicio
