--- a/www/index.html
+++ b/www/index.html
@@ -33,25 +33,28 @@
           <div class="navbar-bg"></div>
               <div class="navbar-inner">
                 <div class="left">
-                  <a href="#" class="link">
+                  <a href="/" class="link">
                     <img src="assets/logo.png" alt="logo pagina" width="37"/>
                   </a>
-                  <a href="#" class="link">
+                  <a href="/" class="link text-color-black">
                     Inicio
                   </a>
-                  <a href="#" class="link new-thread-dialog">
+                  <a href="#" class="link text-color-black new-thread-dialog">
                     Subir
                   </a>
-                  <a href="#" class="link">
+                  <a href="/history" class="link text-color-black">
+                    Historial
+                  </a>
+                  <a href="#" class="link text-color-black theme-dark">
                     Preguntas
                   </a>
-                  <a href="#" class="link">
+                  <a href="#" class="link text-color-black">
                     Nosotros
                   </a>
                 </div>
                 <div class="center">
-                  <div id="panel-header">
-                    <a href="#" class="link color-blue">
+                  <div class="panel-header">
+                    <a href="#" class="link text-color-black">
                       SCUOLA
                     </a>
                   </div>
@@ -63,7 +66,7 @@
                       <i class="material-icons md-only">person</i>
                     </a>
                 </div>
-                <div class="signed-in display">
+                <div class="signed-in display right">
                    <a href="#" class="link" id="logout">
                      <i class="f7-icons if-not-md">square_arrow_right</i>
                      <i class="material-icons md-only">exit_to_app</i>
