--- a/www/pages/history.html
+++ b/www/pages/history.html
@@ -7,17 +7,24 @@
               <a href="/" class="link icon-only back-link">
                 <i class="icon icon-back"></i>
               </a>
-              <div class="title" id="thread-title">HISTORIAL</div>
+              <div class="title" id="thread-title">Historial</div>
             </div>
           </div>
         </div>
         <div class="page-content">
             <div class="block-title block-title-large text-align-center">Historial de tareas subidas</div>
-            <div class="block">
+            <div class="block margin-top">
               <!-- block content -->
+               <div class="ContentHistory">
+                   <div id="no-content-history" class="noContentHistory text-align-center">No has subido tareas aun</div>
+                   <div class="list">
+                    <ul class="history">
+                    </ul>
+                  </div>
+               </div>
             </div>
-        </div>
-        
+        </div>  
 <div/>
+
 
 
