se arreglo el searchbar

--- a/www/index.html
+++ b/www/index.html
@@ -85,6 +85,7 @@
               </div>
               <div class="col-75">
                 <ul id="buscadorUl" class="threads"></ul>
+                <ul id="buscadorUl2"></ul>
               </div>
             </div>
           </div>
