se arreglaron bugs

--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col-25">
                         <div class="card demo-card-header-pic">
-                            <div style="background-image:url('/www/assets/vega.jpg')"
+                            <div style="background-image:url('/www/assets/VEGA.png')"
                             class="card-header align-items-flex-end">
                             </div>
                         <div class="card-content card-content-padding">
