--- a/www/pages/thread.html
+++ b/www/pages/thread.html
@@ -19,7 +19,7 @@
       id="pdfViewer" 
       width="100%" 
       height="500" 
-      src="https://firebasestorage.googleapis.com/v0/b/reactfirebase-c1dc0.appspot.com/o/threads%2FS1t3Y5p2nIjMjqbLnN9W.pdf?alt=media&token=89a49b1d-437b-4ff3-bb8e-789cefe0998b">
+      src="">
       
       <div class="card demo-card-header-pic">
         <div class="card-content card-content-padding">
