--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-25">
                         <div class="card demo-card-header-pic">
-                            <div style="background-image:url('/www/assets//Oscar.jpg')"
+                            <div style="background-image:url('../assets/Oscar.jpg')"
                             class="card-header align-items-flex-end">
                             </div>
                         <div class="card-content card-content-padding">
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-25">
                         <div class="card demo-card-header-pic">
-                            <div style="background-image:url(/www/assets/Roberto.jpg)"
+                            <div style="background-image:url(../assets/Roberto.jpg)"
                             class="card-header align-items-flex-end">
                             </div>
                         <div class="card-content card-content-padding">
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col-25">
                         <div class="card demo-card-header-pic">
-                            <div style="background-image:url('/www/assets/VEGA.png')"
+                            <div style="background-image:url('../assets/VEGA.png')"
                             class="card-header align-items-flex-end">
                             </div>
                         <div class="card-content card-content-padding">
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-25">
                         <div class="card demo-card-header-pic">
-                            <div style="background-image:url('/www/assets/oswaldo.jpg')"
+                            <div style="background-image:url('../assets/oswaldo.jpg')"
                             class="card-header align-items-flex-end">
                             </div>
                         <div class="card-content card-content-padding">
@@ -61,7 +61,7 @@
             <div class="row justify-content-center">
                 <div class="col-25">
                         <div class="card demo-card-header-pic">
-                            <div style="background-image:url('/www/assets/Kevin.png')"
+                            <div style="background-image:url('../assets/Kevin.png')"
                             class="card-header align-items-flex-end">
                             </div>
                         <div class="card-content card-content-padding">
